styles.css
:root {
    /* Takemi Theme */
    font-size: 62.5%;
    --main-color: #1b4fba;
    --secondary-color: #0b3592;
    --tritary-color: #081a45;
    --quad-color: #2d0845;
    --text-color: #ffffff;
    --text-color-3: #c2c2c2;
    --text-color-alt: #000;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body,
h1,
h2,
h3,
p,
nav ul li a {
    font-family: Arial, Helvetica, sans-serif;
    /* Your preferred font stack */
}

html {
    scroll-behavior: smooth;

}

/* 
NAV
 */

.nav-content {

    position: fixed;

}

.nav-content i {
    font-size: 3rem;
    padding: 1rem;
    border-radius: 50%;
    box-shadow: 1px 1px 4px rgb(0, 0, 0);
    background-color: rgb(255, 255, 255);
}

.nav-content {
    background-color: rgb(238, 238, 238);
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    box-shadow: 1px 1px 2px rgb(10, 10, 10);
}

.nav-content ul {
    list-style: none;
    display: flex;
    gap: 3rem;
}

.nav-content li {
    font-weight: bold;
    font-size: 1.2rem;
    color: black;
    text-decoration: none;
    display: flex;
    align-items: center;
}

.nav-content a {
    text-decoration: none;
}

.hero-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2rem;

}

.hero {
    background-color: var(--main-color);
    padding: 12rem 4rem;
    justify-content: center;
    display: flex;
}

.hero h1 {
    font-size: 4rem;
    display: flex;
    justify-content: center;
    color: var(--text-color);
}

.hero p {
    justify-content: center;
    width: 50%;
    margin: 0 auto;
    font-size: 1.6rem;
    text-align: center;
    line-height: 2rem;
    color: var(--text-color-3);
}

.hero-button {
    padding: 1.2rem;
    background-color: var(--secondary-color);
    color: var(--text-color);
    border-radius: 1rem;
    text-decoration: none;
    cursor: pointer;
    border-style: none;
    font-size: 1.6rem;
}

.hero-button-alt {
    padding: 1.2rem;
    background-color: var(--text-color-alt);
    color: var(--text-color);
    border-radius: 1rem;
    text-decoration: none;
    cursor: pointer;
    border-style: none;
    font-size: 1.6rem;
}

.hero-button:hover,
.hero-button:focus {
    background-color: var(--tritary-color);
}

.hero-button a {
    text-decoration: none;
    color: var(--text-color);
}

.hero-image {
    display: flex;
    padding: 20px;
    justify-content: center;
    max-width: 200rem;
    min-width: 50rem;
}

.hero-image img {
    max-width: 75%;
    height: auto;
    color: transparent;
}

.divider-1 {
    height: 100%;
    width: 100%;
    z-index: -1;
}

.divider-2 {
    height: 100%;
    width: 100%;
    z-index: -1;
    padding-top: 10rem;
    margin-bottom: -3px;
}

.testimony-logos {
    display: grid;
    grid-template-columns: repeat(5, auto);
    gap: 5rem;
    font-size: 5rem;
    align-items: center;
    justify-items: center;
    width: 75%;
    margin-top: 3rem;
    max-width: 100rem;
    transition: all 0.5sec ease-in-out;
}

@media screen and (max-width: 860px) {
    .testimony-logos {
        grid-template-columns: repeat(3, auto);
    }

}

.testimony-logos svg {
    width: 75%;
    height: auto;
    fill: white;
}

.test-center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero-content h2 {
    text-align: center;
    color: var(--text-color);
    min-width: 50%;
}

@media screen and (max-width: 860px) {
    .hero-content h2 {
        text-align: center;
        width: 65%;
    }

}

.mementos-platform {
    padding: 0 6rem;
    display: flex;
    justify-content: center;
    justify-items: center;
    align-items: center;
}

.platform-content {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 3rem;
    gap: 3rem;

}

.platform-info {
    display: flex;
    flex-direction: column;
    gap: 3rem;

}

.platform-info h2 {
    font-size: 1.5rem;
}

.platform-info h1 {
    font-size: 3rem;
}

.platform-info p {
    font-size: 2rem;
    max-width: 50rem;
}

.platform-button:hover,
.platform-button:focus {
    background-color: var(--tritary-color);
}

.platform-img {
    width: 100%;
    height: auto;
    min-width: 30rem;
    max-width: 50rem;
}

.platform-button a {
    color: var(--text-color);
    text-decoration: none;
}

.platform-img img {
    width: 100%;
}

.platform-info {
    display: flex;
    flex-direction: column;
    gap: 3rem;

}

.stats-section {
    max-width: 100%;
    padding-top: 10rem;
    width: 100%;
    margin: 0 auto;
    padding-left: 60px;
    padding-right: 60px;
}

.mementos-stats {
    max-width: 90%;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-top: 1px solid rgba(27, 27, 27, 0.16);
    align-items: center;
    padding: 3rem 2rem;
}

@media screen and (max-width: 768px) {
    .stats-section {
        padding: 2rem;
    }
}

.mementos-stats h2 {
    font-size: 2rem;
    margin: 2rem 0;

}

.stats-stack h2 {
    margin-top: 3rem;
    font-size: 2rem;
    align-items: start;
}

.stats-content {
    gap: 4rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 0 4rem;
}

.takemi-icons {
    max-width: 13rem;
    border: 0.4rem solid var(--secondary-color);
    border-radius: 50%;
}

.stats-stack {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.stats-set {
    display: flex;
    gap: 2rem;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    padding: 2rem 3rem;
}

.stats-stack h1 {
    font-size: 10rem;
    margin-bottom: -4.2rem;
    letter-spacing: -0.6rem;
}

.takemi-consultation {
    text-align: center;
    flex-direction: column;
    display: flex;
    width: 100%;
    padding: 20px 60px;
}

.takemi-consultation h1 {
    display: flex;
    font-size: 3rem;

}

.consultation-cards {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}

.consultation-heading {
    display: flex;
    justify-content: center;
}

.consultation-info {
    max-width: 1312px;
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
}

.consultation-grid-1 {
    display: grid;
    grid-template-columns: minmax(0, 800px) minmax(0, 528px);
    gap: 3rem;
}

.consultation-grid-2 {
    display: grid;
    grid-template-columns: minmax(0, 528px) minmax(0, 800px);
    gap: 3rem;
}

.card-1 {
    background-color: var(--main-color);
    width: 100%;
    border-radius: 16px;
    padding: 48px;
    padding-bottom: 0;
}

.card-2 {
    background-color: var(--secondary-color);
    width: 100%;
    border-radius: 16px;
    padding: 48px;
    padding-bottom: 0;
}

.card-2 {
    background-color: var(--secondary-color);
    width: 100%;
    border-radius: 16px;
    padding: 48px;
    padding-bottom: 0;
}

.card-3 {
    background-color: var(--quad-color);
    width: 100%;
    border-radius: 16px;
    padding: 48px;
    padding-bottom: 0;
}

.card-1 h5 {
    font-size: 3rem;
    color: var(--text-color);
    margin-bottom: 1rem;
    text-align: left;
}

.card-1 p {
    font-size: 1.7rem;
    text-align: left;
    color: var(--text-color);
    line-height: 2.5rem;
    padding-bottom: 2rem;
}

.card-2 h5 {
    font-size: 3rem;
    color: var(--text-color);
    margin-bottom: 1rem;
    text-align: center;
}

.card-2 p {
    font-size: 1.7rem;
    text-align: center;
    color: var(--text-color-3);
    line-height: 2.5rem;
    padding-bottom: 2rem;
}

.card-3 h5 {
    font-size: 3rem;
    color: var(--text-color);
    margin-bottom: 1rem;
    text-align: center;
}

.card-3 p {
    font-size: 1.7rem;
    text-align: center;
    color: var(--text-color-3);
    line-height: 2.5rem;
    padding-bottom: 2rem;
}

.card1-button {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.card2-button {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    justify-content: center;
    padding-bottom: 2rem;
}

.card-1-img {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: hidden;
    justify-content: center;
    align-items: flex-end;
}

.card-2-img {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: hidden;
    justify-content: center;
    align-items: flex-end;
}

.card-1-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.card-container1 {
    /*     position: relative; */
}

.card-img-1 {
    width: 100%;
    height: auto;
}

.card-img-2 {
    width: 80%;
    height: auto;
}

/* 

Global

*/

.global {
    background-color: var(--quad-color);
    padding: 5rem 4rem 5rem 4rem;
    display: flex;
    justify-content: center;
}

.global-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    justify-content: center;

    /* Set max width for better readability */
}

.global-text {
    margin-bottom: 3rem;
    width: 100%;
    max-width: 900px;
    /* Limit text width for better readability */
    color: var(--text-color);

}

.global-text h3 {
    font-size: 2rem;
    padding-bottom: 1rem;
}

.global-text h2 {
    font-size: 3rem;
    padding-bottom: 1rem;
}

.global-text p {
    font-size: 1.6rem;
    padding-bottom: 1rem;
}

.image-grid {
    display: grid;
    grid-template-columns: repeat(3, auto);
    gap: 2rem;
    align-items: center;
    justify-items: center;
    max-width: 55%;
    min-width: 45%;
    margin-top: 3rem;
    transition: all 1sec ease-in-out;
}

.image-grid img {
    width: 100%;
    height: auto;
    object-fit: inherit;
    cursor: pointer;
}

@media screen and (max-width: 600px) {
    .image-grid {
        grid-template-columns: repeat(1, 1fr);
        --row-height: 400px;
        justify-content: center;
    }

}

/* in my previous site, I used containers that had similar settings for each.
Simple and straight to the point. Kept margins and padding in line for each.
maybe I can make 2-3 for sections that can be reused.

border-top: 1px solid rgba(27, 27, 27, 0.16); straight line
*/

